force-app/main/default/objects/LLC_BI__Statistic__c/LLC_BI__Statistic__c.object-meta.xml
<CustomObject>
    <description>Contains the statistics data for a related object</description>
    <label>Statistic</label>
    <nameField>
        <displayFormat>STAT-{00000000}</displayFormat>
        <label>Statistic Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>