force-app/main/default/objects/LLC_BI__Statistic__c/fields/LLC_BI__Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Category__c</fullName>
    <description>This field is required. It is manually populated. This field indicates the category to which the statistic belongs. The category is used to logically group statistics. The category is used by other components to determine which statistics to use or to display. The value is populated from the LLC_BI__StatisticsConfiguration__c.LLC_BI__Field_Name__c associated with the LLC_BI__StatisticsConfiguration__c record that generated this statistic.</description>
    <inlineHelpText>Category for statistic value</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>