force-app/main/default/objects/LLC_BI__Statistic__c/fields/LLC_BI__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Field_Name__c</fullName>
    <description>This field is required. It is manually populated. This field uniquely identifies the statistic within the specified category. The value is populated from the LLC_BI__StatisticsConfiguration__c.LLC_BI__Field_Name__c associated with the LLC_BI__StatisticsConfiguration__c record that generated this statistic.</description>
    <inlineHelpText>Name of statistic field</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>