force-app/main/default/objects/LLC_BI__Statistic__c/fields/LLC_BI__Value_Currency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Value_Currency__c</fullName>
    <description>This field is optional and is manually populated. If specified, it indicates the currency value associated with the statistics record.</description>
    <inlineHelpText>Currency Value for the statistics field</inlineHelpText>
    <label>Value Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>