force-app/main/default/objects/LLC_BI__Statistic__c/fields/LLC_BI__Value_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Value_Number__c</fullName>
    <description>This field is optional and is manually populated. If specified, it indicates the percentage value of the statistic.</description>
    <inlineHelpText>Number Value for the statistics field</inlineHelpText>
    <label>Value Number</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>