force-app/main/default/objects/LLC_BI__Statistic__c/fields/LLC_BI__Value_Percentage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Value_Percentage__c</fullName>
    <description>This field is optional and is manually populated. If specified, it indicates the text value of the statistic.</description>
    <inlineHelpText>Percentage Value for the statistics field</inlineHelpText>
    <label>Value Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>