force-app/main/default/objects/LLC_BI__Statistic__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Account__c</columns>
    <columns>LLC_BI__Category__c</columns>
    <columns>LLC_BI__Field_Name__c</columns>
    <columns>LLC_BI__Loan__c</columns>
    <columns>LLC_BI__Value_Currency__c</columns>
    <columns>LLC_BI__Value_Date__c</columns>
    <columns>LLC_BI__Value_Number__c</columns>
    <columns>LLC_BI__Value_Percentage__c</columns>
    <columns>LLC_BI__Value_Text__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>